mdix-php/src/Mdix/Internal/ffi_header.h

typedef int            int32_t;
/* ── Metadata ────────────────────────────────────────────────────────────── */

const char* mdix_version(void);
/* ── Handle lifecycle — plain .mdix ─────────────────────────────────────── */

void* mdix_load(const char* path);
void* mdix_load_str(const char* source);
void  mdix_free(void* handle);
/* ── Handle lifecycle — encrypted ───────────────────────────────────────── */

void* mdix_load_encrypted(const char* enc_path, const char* key_path);
char**  mdix_get_keys(const void* handle, const char* prefix, int32_t* out_count);
/* ── Memory management ───────────────────────────────────────────────────── */

void mdix_free_string(char* s);
void mdix_free_string_array(char** arr, int32_t count);
/* ── Error reporting ─────────────────────────────────────────────────────── */

const char* mdix_get_last_error(void);
void        mdix_clear_error(void);
/* ── Builder lifecycle ───────────────────────────────────────────────────── */

void*   mdix_builder_new(void);
void    mdix_builder_free(void* builder);
int32_t mdix_builder_entry_count(const void* builder);
bool    mdix_builder_clear(void* builder);
/* ── Builder write ───────────────────────────────────────────────────────── */

bool mdix_builder_set_string(void* builder, const char* path, const char* value);
bool mdix_builder_set_int(void* builder, const char* path, int32_t value);
bool mdix_builder_set_float(void* builder, const char* path, float value);
bool mdix_builder_set_double(void* builder, const char* path, double value);
bool mdix_builder_set_bool(void* builder, const char* path, bool value);
bool mdix_builder_remove(void* builder, const char* path);
/* ── Builder read-back ───────────────────────────────────────────────────── */

bool    mdix_builder_has_key(const void* builder, const char* path);
char*   mdix_builder_get_string(const void* builder, const char* path);
int32_t mdix_builder_get_int(const void* builder, const char* path);
float   mdix_builder_get_float(const void* builder, const char* path);
double  mdix_builder_get_double(const void* builder, const char* path);
bool    mdix_builder_get_bool(const void* builder, const char* path);
/* ── Builder persistence ─────────────────────────────────────────────────── */

bool  mdix_builder_save(const void* builder, const char* path);
char* mdix_builder_to_string(const void* builder);