ffi/builds/build_50/MdixNative.cs


        /// <summary>
        ///  Free a string returned by any mdix getter that returns *mut c_char.
        ///
        ///  Passing null is safe. Do NOT call this on the pointer from mdix_version().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free_string(byte* s);

        /// <summary>
        ///  Free an array of strings returned by mdix_get_keys.
        ///
        ///  `arr`   — pointer returned by mdix_get_keys.
        ///  `count` — value written to out_count by mdix_get_keys.
        ///
        ///  Passing a null arr is safe.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free_string_array", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free_string_array(byte** arr, int count);

        /// <summary>
        ///  Return the last error message as a null-terminated C string, or null
        ///  if the last operation succeeded.
        ///
        ///  The returned pointer is valid only until the next mdix FFI call.
        ///  Copy the string immediately — do not cache the pointer.
        ///  Do NOT free this pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_last_error();

        /// <summary>
        ///  Clear the last error without making any other call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_clear_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_clear_error();

        /// <summary>
        ///  Create a new empty builder handle.
        ///
        ///  The caller must free it with mdix_builder_free() when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern MdixBuilderHandle* mdix_builder_new();

        /// <summary>
        ///  Free a builder handle. Passing null is safe.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_builder_free(MdixBuilderHandle* builder);

        /// <summary>
        ///  Return the number of entries currently in the builder. Returns -1 if null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_entry_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_builder_entry_count(MdixBuilderHandle* builder);

        /// <summary>
        ///  Remove all entries from the builder without freeing the handle.
        ///
        ///  Returns true on success, false if the builder is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_clear", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_clear(MdixBuilderHandle* builder);

        /// <summary>
        ///  Set a string value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_string(MdixBuilderHandle* builder, byte* path, byte* value);

        /// <summary>
        ///  Set an integer value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_int(MdixBuilderHandle* builder, byte* path, int value);

        /// <summary>
        ///  Set a float value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_float(MdixBuilderHandle* builder, byte* path, float value);

        /// <summary>
        ///  Set a double value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_double(MdixBuilderHandle* builder, byte* path, double value);

        /// <summary>
        ///  Set a boolean value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_bool(MdixBuilderHandle* builder, byte* path, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>
        ///  Remove a key from the builder.
        ///
        ///  Returns true if the key existed and was removed, false otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_remove", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_remove(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Check whether a key exists in the builder.
        ///
        ///  Returns false if the builder is null or the key is not present.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_has_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_has_key(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Get a string value from the builder by dotted path.
        ///
        ///  Returns a heap-allocated C string on success, null on failure.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_builder_get_string(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Get an integer value from the builder by dotted path.
        ///
        ///  Returns 0 on failure. Use mdix_builder_has_key() to distinguish 0 from not-found.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_builder_get_int(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Get a float value from the builder by dotted path.
        ///
        ///  Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern float mdix_builder_get_float(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Get a double value from the builder by dotted path.
        ///
        ///  Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double mdix_builder_get_double(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Get a boolean value from the builder by dotted path.
        ///
        ///  Returns false on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_get_bool(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Save the builder contents to a .mdix file on disk.
        ///
        ///  Creates the file and any intermediate directories automatically.
        ///  Returns true on success, false on failure.
        ///  On failure, call mdix_get_last_error() for details.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_save", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_save(MdixBuilderHandle* builder, byte* path);

        /// <summary>
        ///  Serialize the builder contents to a .mdix format string.
        ///
        ///  Returns a heap-allocated C string on success, null on failure.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_to_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_builder_to_string(MdixBuilderHandle* builder);


    }

    /// <summary>
    ///  Read handle wrapping a fully loaded DixData.
    ///
    ///  Created by mdix_load / mdix_load_str / mdix_load_encrypted.
    ///  Freed by mdix_free.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct MdixHandle
    {
        public DixData data;
    }

    /// <summary>
    ///  Write handle holding a mutable key-value store.
    ///
    ///  Used for building save data at runtime without needing a template file.
    ///  Created by mdix_builder_new.
    ///  Freed by mdix_builder_free.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct MdixBuilderHandle
    {
        /// <summary>
        ///  Flat dotted-path key → value store, mirrors DixData's internal layout.
        /// </summary>
        public HashMap entries;
    }



}
